--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-email/render": "^2.0.2",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/mixpanel-browser": "^2.60.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentful": "^11.10.2",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
+    "mixpanel-browser": "^2.73.0",
     "next": "16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
